# mobile-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
.github/workflows/: release.yaml
src/: android.ts  browserstack.ts  ios.ts  robot.ts  server.ts
src/mobile_mcp/: __init__.py  __main__.py  logger.py  server.py
src/mobile_mcp/clients/: __init__.py  browserstack_api.py  wda.py
src/mobile_mcp/managers/: __init__.py  android_manager.py  device_resolver.py  ios_manager.py
src/mobile_mcp/robots/: __init__.py  android.py  base.py  browserstack.py  ios.py  mobile_device.py  simulator.py
src/mobile_mcp/utils/: __init__.py  image.py  png.py  subprocess_utils.py  validation.py  xml_parser.py
test/: android.ts  browserstack.test.ts  ios.ts
tests/: __init__.py  conftest.py  test_base.py  test_cli.py  test_clients.py  test_managers.py  test_robots.py  test_server.py  test_utils.py
